// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation:  renders correctly when billing not enabled 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "onehundred",
              "includesIp": true,
              "monthly": 100,
              "volume": 1000,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <p>
      Select a plan on the left to update your subscription
    </p>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={false}
      fullWidth={true}
      primary={true}
      size="default"
      type="submit"
    >
      Enable Automatic Billing
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render correctly for an upgrade effectively immediately 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "zero",
              "isFree": true,
              "monthly": 0,
              "volume": 100,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <div>
      <small>
        New Plan
      </small>
      <h5>
        <PlanPrice
          plan={
            Object {
              "code": "twohundred",
              "monthly": 200,
              "volume": 2000,
            }
          }
        />
      </h5>
    </div>
    <p>
      Your upgrade will be effective today.
    </p>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={false}
      fullWidth={true}
      primary={true}
      size="default"
      type="submit"
    >
      Upgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render correctly with a downgrade 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "onehundred",
              "includesIp": true,
              "monthly": 100,
              "volume": 1000,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <div>
      <small>
        New Plan
      </small>
      <h5>
        <PlanPrice
          plan={
            Object {
              "code": "fifty",
              "includesIp": false,
              "monthly": 50,
              "volume": 500,
            }
          }
        />
      </h5>
    </div>
    <p>
      Your downgrade will take effect at the end of the current billing cycle. You will not be able to make any plan changes until your downgrade takes effect.
    </p>
    <div>
      <p>
        Note: your current plan includes a free dedicated IP address.
      </p>
      <p>
        If you downgrade to the selected plan, you will lose that discount and will be charged the standard $
        20
         / month price for each dedicated IP on your next statement.
      </p>
      <p>
        To remove dedicated IPs from your account, please 
        <Connect(SupportTicketLink)
          issueId="general_issue"
        >
          submit a support ticket
        </Connect(SupportTicketLink)>
        .
      </p>
    </div>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={true}
      fullWidth={true}
      primary={false}
      size="default"
      type="submit"
    >
      Downgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render correctly with a downgrade to free 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "onehundred",
              "includesIp": true,
              "monthly": 100,
              "volume": 1000,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <div>
      <small>
        New Plan
      </small>
      <h5>
        <PlanPrice
          plan={
            Object {
              "code": "zero",
              "isFree": true,
              "monthly": 0,
              "volume": 100,
            }
          }
        />
      </h5>
    </div>
    <p>
      Your downgrade will take effect at the end of the current billing cycle. You will not be able to make any plan changes until your downgrade takes effect.
    </p>
    <p>
      This downgrade will remove all add-ons, including any dedicated IP addresses you may have purchased.
    </p>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={true}
      fullWidth={true}
      primary={false}
      size="default"
      type="submit"
    >
      Downgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render correctly with an upgrade 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "onehundred",
              "includesIp": true,
              "monthly": 100,
              "volume": 1000,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <div>
      <small>
        New Plan
      </small>
      <h5>
        <PlanPrice
          plan={
            Object {
              "code": "twohundred",
              "monthly": 200,
              "volume": 2000,
            }
          }
        />
      </h5>
    </div>
    <p>
      Your upgrade will be effective today and you'll be billed a pro-rated amount for your current billing cycle.
    </p>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={false}
      fullWidth={true}
      primary={true}
      size="default"
      type="submit"
    >
      Upgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render correctly with an upgrade with IP 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "zero",
              "isFree": true,
              "monthly": 0,
              "volume": 100,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <div>
      <small>
        New Plan
      </small>
      <h5>
        <PlanPrice
          plan={
            Object {
              "code": "twohundred",
              "includesIp": true,
              "monthly": 200,
              "volume": 2000,
            }
          }
        />
      </h5>
    </div>
    <p>
      Your upgrade will be effective today.
    </p>
    <div>
      <p>
        A free dedicated IP address will be added to your default IP pool.
      </p>
    </div>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={false}
      fullWidth={true}
      primary={true}
      size="default"
      type="submit"
    >
      Upgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;

exports[`Confirmation:  should render with nothing selected 1`] = `
<Panel>
  <Panel.Section>
    <span>
      <small>
        Current Plan
      </small>
      <h4>
        <PlanPrice
          plan={
            Object {
              "code": "onehundred",
              "includesIp": true,
              "monthly": 100,
              "volume": 1000,
            }
          }
        />
      </h4>
    </span>
  </Panel.Section>
  <Panel.Section>
    <p>
      Select a plan on the left to update your subscription
    </p>
  </Panel.Section>
  <Panel.Section>
    <Button
      destructive={false}
      fullWidth={true}
      primary={true}
      size="default"
      type="submit"
    >
      Upgrade Plan
    </Button>
  </Panel.Section>
</Panel>
`;
